more refactoring of content of paper, new model for psa.

--- a/report/pers_schedule/mainmatter/pers_schedule_prias.tex
+++ b/report/pers_schedule/mainmatter/pers_schedule_prias.tex
@@ -2,11 +2,11 @@
 
 \section{Personalized schedules for patients in PRIAS}
 \label{sec : pers_schedule_PRIAS}
-
-To demonstrate how the personalized schedules described in section \ref{subsec : pers_sched_approaches} work, we apply them to the patients in the PRIAS dataset. To this end, we divided the PRIAS data set into training(5938 subjects) and demonstration data sets (5 subjects). We fitted a joint model to the training data set and then used it to create a personalized schedule for subjects in demonstration data set. We fit the joint model using the R package JMbayes \citep{rizopoulosJMbayes}, which uses the Bayesian methodology to estimate the model parameters. 
+To demonstrate how the personalized scheduling algorithm described in section \ref{subsubsec : pers_sched_algorithm} works, we apply it to the patients in the PRIAS dataset. To this end, we divide the PRIAS data set into training(5264 patients) and demonstration data sets (3 patients). We fit a joint model to the training data set and then use it to create a personalized schedule for patients in demonstration data set. We fit the joint model using the R package JMbayes \citep{rizopoulosJMbayes}, which uses the Bayesian methodology to estimate the model parameters.
 
 \subsection{Fitting the joint model to PRIAS dataset}
-The training data set contains information about 5938 prostate cancer patients who satisfied the conditions for enrollment in AS. For every patient the age at the time of induction in AS was recorded. PSA was measured every 3 months for first 2 years and every 6 months thereafter. To detect Gleason reclassification, biopsies were conducted at different time points on the basis of a predetermined schedule as well as PSA-DT as described in section \ref{sec : introduction}. For the longitudinal analysis of PSA measurements we used $\log_2 PSA$ measurements instead of the raw data. The log transformation was done because the PSA scores took very large values at the onset of disease progression. This indicated that the underlying distribution for PSA scores was right skewed. The longitudinal sub-models of the joint model we fitted is given by:
+\label{subsec : jm_fit_prias}
+The training data set contains information about 5938 prostate cancer patients who satisfied the conditions for enrollment in AS. For every patient the age at the time of induction in AS was recorded. PSA was measured every 3 months for first 2 years and every 6 months thereafter. To detect Gleason reclassification, biopsies were conducted at different time points on the basis of a predetermined schedule as well as PSA-DT as described in section \ref{sec : introduction}. For the longitudinal analysis of PSA measurements we used $\log_2 PSA$ measurements instead of the raw data. The log transformation was done because the PSA scores took very large values around the time of disease progression. This indicated that the underlying distribution for PSA scores was right skewed. The longitudinal sub-model of the joint model we fit is given by:
 
 \begin{align*}
 \log_2 PSA(t) &= m_i(t) + \varepsilon_i(t), \\
@@ -16,14 +16,15 @@ m_i(t) &= (\beta_0 + b_{i0}) + \beta_1 (Age-70) + \beta_2 (Age-70)^2\\
 \boldsymbol{b}_i & \sim N(0, \boldsymbol{D})
 \end{align*}
 
-The evolution of PSA levels over time is modeled flexibly using B-splines. For the fixed effects part the spline consists of 3 internal knots. The internal knots are at $\mathcal{K} =\{0.5, 1.2, 2.5\}$ years, and boundary knots are at 0 and 7 years. For the random effects part there is only 1 internal knot at 0.5 years and the boundary knots are at 0 and 7 years. The choice of knots was based on exploratory analysis as well as on the basis of model selection criteria AIC and BIC. The variable Age was median centered so avoid numerical instabilities while estimating the parameters in the model. For the survival sub-model the hazard function we fitted is given by:
+The evolution of PSA levels over time is modeled flexibly using B-splines. For the fixed effects part the spline consists of 3 internal knots. The internal knots are at $\mathcal{K} =\{0.5, 1.2, 2.5\}$ years, and boundary knots are at 0 and 7 years. For the random effects part there is only 1 internal knot at 0.5 years and the boundary knots are at 0 and 7 years. The choice of knots was based on exploratory analysis as well as on the basis of model selection criteria AIC and BIC. The variable Age was median centered to avoid numerical instabilities while estimating the parameters in the model. For the survival sub-model the hazard function we fitted is given by:
 
 \begin{equation*}
 h_i(t) = h_0(t) e^{\gamma_1 (Age-70)  + \gamma_2 (Age-70)^2  \alpha_1 m_i(t) + \alpha_2 m'_i(t)}
 \end{equation*}
-where, $\alpha_1$ and $\alpha_2$ are measures of strength of association between hazard of Gleason reclassification and PSA value and PSA velocity, respectively. $h_0(t)$ is the baseline hazard at time t, and is modeled flexibly using P-splines\citep{eilers1996flexible}. Lastly, to fit the joint model we use the R package JMbayes \cite{rizopoulosJMbayes}, which uses a Bayesian approach for parameter estimation. The parameter estimates for the survival sub-model were estimated using Bayesian ridge methodology \citep{andrinopoulou2016bayesian}.
+where, $\alpha_1$ and $\alpha_2$ are measures of strength of association between hazard of Gleason reclassification and PSA value and PSA velocity, respectively. $h_0(t)$ is the baseline hazard at time t, and is modeled flexibly using P-splines\citep{eilers1996flexible}. Lastly, to fit the joint model we use the R package JMbayes \cite{rizopoulosJMbayes}, which uses a Bayesian approach for parameter estimation.
 
 \subsubsection{Parameter Estimates}
+\label{subsec : param_estimates_jm_fit_prias}
 The parameter estimates for the joint model we fitted to the PRIAS data set are shown in Table \ref{tab : PSA_long} and Table \ref{tab : PSA_survival}. Since the longitudinal evolution of $\log_2 PSA$ is modeled with non-linear terms, the interpretation of the coefficients corresponding to time is not straightforward. In lieu of the interpretation we present the fitted evolution of PSA over a period of 10 years for a patient who is 70 years old in Figure \ref{fig : fitted_trend_psa}. It can be seen that the after the first 6 months the PSA levels steadily increase over the follow up period. Since the model for PSA has only additive terms, this evolution remains same for all patients. The effect of Age only affects the baseline PSA score. However it is so small that it can be ignored for all practical purposes.\\
 
 \begin{figure}[!htb]
@@ -71,7 +72,7 @@ Slope: $\log_2 PSA$           & 1.937  & 0.278    & 1.420  & 2.525              
 \end{table}
 
 \subsection{Demonstration of personalized schedules}
-The personalized schedules we propose in this work depend on this dynamic distribution for time to Gleason reclassification (Eq. \ref{eq : dyn_dist_fail_time}). As more PSA measurements are taken and repeat biopsies are performed, the distribution changes updated accordingly. In this section, we demonstrate the personalized schedules based on this distribution for a set of demo patients.\\
+The personalized schedules we propose in this work depend on the predictive distribution $g(T^*_j)$ (Eq. \ref{eq : dyn_dist_fail_time}). As more PSA measurements are taken and repeat biopsies are performed, the distribution changes updated accordingly. In this section, we demonstrate the personalized schedules based on this distribution for a set of demo patients.\\
 
 %\begin{figure}[!htb]
 %	\centering
@@ -106,6 +107,6 @@ The personalized schedules we propose in this work depend on this dynamic distri
 
 It can be seen in Figure \ref{fig : prias_demo_pid_3174} that the patient 3174 had a biopsy at the time of induction and none after that. The PSA for the patient increases rapidly after the 2nd year. In response to this rapid increase, the proposed biopsy times based on conditional expected failure time also decrease accordingly from 11 years to around 3.4 years. The change for risk based methods is not so drastic though. Further it can be seen that at the last visit for PSA, the proposed biopsy time is earlier than the last 5 PSA visits and similar is the case for the proposed biopsy time based on dynamic risk of failure. This is due to the fact that the last time of biopsy was time 0 (induction time) and thus the time to Gleason reclassification can take any value larger than 0. We discuss this issue in detail in section \ref{subsec : simulation_setup}.\\
 
-Figure \ref{fig : prias_demo_pid_911} shows the PSA evolution and biopsy times for subject 911. It can be seen that this patient had 3 biopsies where Gleason reclassification did not happen. At year 2 when the patient's PSA increases rapidly the proposed failure times also decrease, whereas they increase over the next 1 year because the PSA also drops down in that time period. The fact that PSA velocity affects the biopsy times the most is also evident in the case of subject 2340, whose evolution is shown in Figure \ref{fig : prias_demo_pid_2340}. Here the rate of change at each time point is not high, and even though the PSA value reaches as high as 25 it has no effect on proposed biopsy times. This is in accordance with the estimated strength of association between PSA velocity/value and hazard of time to Gleason reclassification.\\
+Figure \ref{fig : prias_demo_pid_911} shows the PSA evolution and biopsy times for patient 911. It can be seen that this patient had 3 biopsies where Gleason reclassification did not happen. At year 2 when the patient's PSA increases rapidly the proposed failure times also decrease, whereas they increase over the next 1 year because the PSA also drops down in that time period. The fact that PSA velocity affects the biopsy times the most is also evident in the case of patient 2340, whose evolution is shown in Figure \ref{fig : prias_demo_pid_2340}. Here the rate of change at each time point is not high, and even though the PSA value reaches as high as 25 it has no effect on proposed biopsy times. This is in accordance with the estimated strength of association between PSA velocity/value and hazard of time to Gleason reclassification.\\
 
 An interesting observation we made while creating these schedules was that the variance of time to Gleason reclassification (Eq. \ref{eq : varFailureTime}) was quite high, which essentially rules out the usefulness of conditional expected time to Gleason reclassification. Given the large difference in proposed biopsy times based on the former and methods based on dynamic risk of Gleason reclassification, one might conclude that the latter are more useful. However as we will see in the simulation study (Section \ref{sec: simulation_study}) ahead, the usefulness of the two categories of methods depends on the distribution of time to Gleason reclassification.
