--- a/report/pers_schedule/mainmatter/introduction.tex
+++ b/report/pers_schedule/mainmatter/introduction.tex
@@ -8,12 +8,12 @@ Currently the largest AS program worldwide is PRIAS (\url{www.prias-project.org}
 
 The reliability of Gleason score comes at a high cost. Biopsies are difficult to obtain, are painful and have serious side effects such as hematuria and sepsis for prostate cancer patients \citep{loeb2013systematic}. So much so, that PRIAS as well as majority of the AS programs around the world strongly adhere to the rule of not having more than 1 biopsy per year. Performing a biopsy every year has the advantage that it is possible to detect GR within 1 year since its occurrence. The drawbacks of this schedule though, are not only medical but also financial. \cite{keegan2012active} have shown that if a biopsy is performed every year then the costs of AS per head, at 10 years of follow-up exceed the costs of treatment (brachytherapy or prostatectomy) at 6 and 8 years of follow-up, respectively. They also found that performing biopsy every other year led to 99\% increase in savings (AS vs. primary treatment) per head over a period of 10 years compared to the scenario where biopsy is performed every year. Despite this, several AS studies schedule biopsies for every patient annually \citep{tosoian2011active,welty2015extended}. For patients enrolled in PRIAS the schedule is comparatively less rigorous. One biopsy is performed at the time of induction, and the rest are scheduled at 1, 4, 7, 10 years and every 5 years thereafter. For patients who have a PSA doubling time (PSA-DT) less than 10 years, repeat biopsy every year is advised.\\
 
-The biopsy schedule of PRIAS program is less rigorous than other programs, and yet PRIAS has a high non compliance rate for repeat biopsies. \cite{bokhorst2015compliance} reported that the percentage of men receiving repeat biopsies decreased from 81\% at year 1 to 60\% in year 4, 53\% in year 7 and 33\% in year 10 of follow up. Non compliance of biopsy schedule reduces the effectiveness of AS programs, as progression is detected late. On the other hand even if patients comply with the schedule, be it annually or the schedule of PRIAS, it is not suitable for every patient. Patients whose cancers progress slowly often end up having biopsies when they are not needed. For patients who have faster progressions, crude measures such as PSA-DT are employed to decide if frequent biopsies are required. The fact that existing schedules require improvement is also evident in some of the reasons given by patients for non-compliance:  \textquoteleft patient does not want biopsy\textquoteright, \textquoteleft PSA stable\textquoteright, \textquoteleft complications on last biopsy\textquoteright and \textquoteleft no signs of disease progression on previous biopsy\textquoteright.\\ 
+The biopsy schedule of PRIAS program is less rigorous than other programs, and yet PRIAS has a high non compliance rate for repeat biopsies. \cite{bokhorst2015compliance} reported that the percentage of men receiving repeat biopsies decreased from 81\% at year 1 to 60\% in year 4, 53\% in year 7 and 33\% in year 10 of follow up. Non compliance of biopsy schedule reduces the effectiveness of AS programs, as progression is detected late. On the other hand even if patients comply with the schedule, be it annually or the schedule of PRIAS, it may not be suitable for them. A patient whose cancer progresses slowly will often end up having biopsies when they are not needed. For a patient who has a faster progressing disease, crude measures such as PSA-DT are employed to decide if frequent biopsies are required. The fact that existing schedules require improvement is also evident in some of the reasons given by patients for non-compliance:  \textquoteleft patient does not want biopsy\textquoteright, \textquoteleft PSA stable\textquoteright, \textquoteleft complications on last biopsy\textquoteright and \textquoteleft no signs of disease progression on previous biopsy\textquoteright.\\ 
 
-Let us assume that we have a new patient $j$ enrolled in the AS program. The most useful biopsy schedule for him will be the one with the least number of biopsies $N_j^b$ and the smallest offset $O_j = T_j^o - T_j^*$ possible, where $T_j^o$ is the time at which GR is observed and $T_j^*$ is the actual time at which GR occurred. The search for the most useful biopsy schedule is the motivation behind this work. To this end, we have proposed alternative biopsy schedules, belonging to a class of schedules called personalized schedules. Personalized schedules are tailored separately for every patient and every disease. A simple example is the PRIAS schedule, which is personalized since it depends on the PSA-DT of the patient, an indicator of the health. More sophisticated personalized schedules have been developed in the past. For e.g. \cite{bebu2017OptimalScreening} have proposed Markov models based cost optimized personalized schedules. \cite{oMahonyOptimaInterval} have proposed cost optimized personalized equi-spaced screening intervals, using Microsimulation Screening Analysis (MISCAN) models. \cite{parmigiani1998designing} have used information theory to come up with schedules for detecting time to event in the smallest possible time interval. Most of these methods however create an entire schedule in advance. \cite{drizopoulosPersScreening} have proposed dynamic personalized schedules for longitudinal markers using joint models for time to event and longitudinal data\citep{tsiatis2004joint,rizopoulos2012joint}.\\
+Let us assume that we have a new patient $j$ enrolled in the AS program. The most useful biopsy schedule for him will be the one with the least number of biopsies $N_j^b$ and the smallest offset $O_j = T_j^o - T_j^*$ possible, where $T_j^o$ is the time at which GR is observed and $T_j^*$ is the actual time at which GR occurred. The search for the most useful biopsy schedule is the motivation behind this work. To this end, we have proposed alternative biopsy schedules, belonging to a class of schedules called personalized schedules. Personalized schedules are tailored separately for every patient and every disease. A simple example is the PRIAS schedule, which is personalized since it depends on the PSA-DT of the patient, an indicator of the state of disease. More sophisticated personalized schedules have been developed in the past. For e.g. \cite{bebu2017OptimalScreening} have proposed Markov models based cost optimized personalized schedules. \cite{oMahonyOptimaInterval} have proposed cost optimized personalized equi-spaced screening intervals, using Microsimulation Screening Analysis (MISCAN) models. \cite{parmigiani1998designing} have used information theory to come up with schedules for detecting time to event in the smallest possible time interval. Most of these methods however create an entire schedule in advance. \cite{drizopoulosPersScreening} have proposed dynamic personalized schedules for longitudinal markers using joint models for time to event and longitudinal data\citep{tsiatis2004joint,rizopoulos2012joint}.\\
 
-The personalized schedules we have proposed in this paper, utilize joint models and are dynamic. i.e. at a time only one future visit is scheduled, based on all the information gathered up to that point in time. More specifically, we have proposed two types of personalized schedules. One based on expected time of GR of a patient and the second based on the risk of GR. We have also analyzed an approach where the two types of personalized schedules are combined. Both types of schedules not only consider a patient's measurable attributes such as age, but also latent patient to patient variations in health, which cannot be measured directly. Results from previous repeat biopsies of the patient and PSA measurements as well as the population level information about hazard of GR, is used by the personalized schedules we have proposed. It is important to note that a schedule for DRE measurements is not of interest since it is a non invasive procedure and has no serious medical implications. Thus the only event of interest is GR and not disease progression or DRE crossing the threshold of cT2c.\\
+The personalized schedules we have proposed in this paper, utilize joint models and are dynamic. i.e. at a time only one future visit is scheduled, based on all the information gathered up to that point in time. More specifically, we have proposed two types of personalized schedules. One based on expected time of GR of a patient and the second based on the risk of GR. We have also analyzed an approach where the two types of personalized schedules are combined. Both types of schedules not only consider a patient's measurable attributes such as age, but also latent patient to patient variations in health, which cannot be measured directly. Results from previous repeat biopsies of the patient and PSA measurements as well as the population level information about hazard of GR, are used by the personalized schedules that we have proposed. It is important to note that a schedule for DRE measurements is not of interest since it is a non invasive procedure and has no serious medical implications. Thus the only event of interest is GR and not disease progression or DRE crossing the threshold of cT2c.\\
 
-Using joint models to model the association between PSA measurements and risk of GR has the advantage that this association is modeled via random effects, and therefore the models have an inherent patient specific nature. Secondly, they allow modeling the entire longitudinal history of PSA measurements, which is more sophisticated than PSA-DT. The use of PSA measurements in creating a personalized schedule is important because PSA is easy to measure, is cost effective and does not have any side effects. Secondly, in PRIAS \cite{bokhorst2015compliance} found that compliance rate for PSA measurements was as high as 91\%. They also showed that there were more men who had a Gleason score greater than 6 as well as PSA-DT less than 3 years compared to men who had Gleason > 6 as well as PSA-DT larger than 3 years. i.e. Information from PSA was found to be indicative of GR. Lastly, some patients/doctors in PRIAS did not comply with the biopsy schedule because they considered PSA to be stable. Therefore, if information from PSA is used in a methodical manner, it can lead to a more informative medical decision making process.\\
+Using joint models to model the PSA measurements and risk of GR has the advantage that the association between the two is also modeled. More importantly, the association is modeled via random effects, and therefore the models have an inherent patient specific nature. Secondly, joint models allow modeling the entire longitudinal history of PSA measurements, which is more sophisticated than PSA-DT. The use of PSA measurements in creating a personalized schedule is important because PSA is easy to measure, is cost effective and does not have any side effects. Secondly, in PRIAS \cite{bokhorst2015compliance} found that compliance rate for PSA measurements was as high as 91\%. They also showed that there were more men who had a Gleason score greater than 6 as well as PSA-DT less than 3 years compared to men who had Gleason > 6 as well as PSA-DT larger than 3 years. i.e. Information from PSA was found to be indicative of GR. Lastly, some patients/doctors in PRIAS did not comply with the biopsy schedule because they considered PSA to be stable. However, if information from PSA is used in a methodical manner, it can lead to a more informative medical decision making process.\\
 
 The rest of the paper is organized as follows. Section \ref{subsec : jm_definition} covers briefly the joint modeling framework in context of the problem at hand. Section \ref{subsec : pers_sched_approaches} details the personalized scheduling approaches we have proposed in this paper. In section \ref{sec : pers_schedule_PRIAS} we demonstrate the efficacy of personalized schedules in a real world scenario by employing them for the patients from  the PRIAS study. Lastly, in section \ref{sec: simulation_study}, we present the results from a simulation study we conducted, to compare personalized schedules with the schedule of PRIAS study, as well with the most aggressive biopsy schedule of doing annual biopsies.
